// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display error message and description on error generated by child 1`] = `
<div
  style="height: 100vh; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; margin: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 0px 24px;"
>
  <div
    style="font-size: 4.3em; font-weight: 100; margin-bottom: 16px;"
  >
    500
  </div>
  <div
    style="font-size: 1.3em; font-weight: 300; margin-bottom: 8px;"
  >
    Error
  </div>
  <div
    style="font-size: 0.9em; color: rgb(89, 89, 89); max-width: 400px;"
  >
    ErrorBoundary test error
  </div>
  <div
    style="font-size: 0.9em; color: rgb(89, 89, 89); max-width: 400px; margin-top: 4px;"
  >
    error description
  </div>
  <div
    style="margin-top: 24px;"
  >
    <a
      href="/"
      style="color: rgb(24, 144, 255); text-decoration: none;"
    >
      Return to home page
    </a>
  </div>
</div>
`;

exports[`display error message on error generated by child 1`] = `
<div
  style="height: 100vh; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; margin: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 0px 24px;"
>
  <div
    style="font-size: 4.3em; font-weight: 100; margin-bottom: 16px;"
  >
    500
  </div>
  <div
    style="font-size: 1.3em; font-weight: 300; margin-bottom: 8px;"
  >
    Error
  </div>
  <div
    style="font-size: 0.9em; color: rgb(89, 89, 89); max-width: 400px;"
  >
    ErrorBoundary test error
  </div>
  <div
    style="margin-top: 24px;"
  >
    <a
      href="/"
      style="color: rgb(24, 144, 255); text-decoration: none;"
    >
      Return to home page
    </a>
  </div>
</div>
`;

exports[`display fallback component on error generated by child 1`] = `
<div>
  fallback: 
  ErrorBoundary test error
</div>
`;

exports[`display no error message on error generated by child 1`] = `null`;

exports[`no error 1`] = `
<div>
  one
</div>
`;
